@startuml CommunicationModuleFull
title Domain Model - Communication, Notification, Study Statistics (with Methods)

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontSize 16
skinparam classAttributeFontSize 14
skinparam classBackgroundColor #FDF6E3
skinparam classBorderColor #073642
skinparam classArrowFontSize 14
skinparam defaultTextAlignment center
skinparam shadowing false
skinparam linetype ortho

' ===== Conversation =====
class Conversation {
    +id: String
    +type: ConversationType
    +title: String?
    +lastMessageAt: Instant
    +createdAt: Instant
    +updatedAt: Instant
    --
    +createConversation(type: ConversationType, title: String?, participantIds: List<String>): Flow<Resource<Conversation>>
    +getConversationById(conversationId: String): Flow<Resource<Conversation?>>
    +getConversationsByUser(userId: String): Flow<Resource<List<Conversation>>>
    +deleteConversation(conversationId: String): Flow<Resource<Unit>>
}

' ===== ConversationParticipant =====
class ConversationParticipant {
    +conversationId: String
    +userId: String
    +joinedAt: Instant
    +lastViewedAt: Instant
    +isMuted: Boolean
    --
    +addParticipant(conversationId: String, userId: String): Flow<Resource<Unit>>
    +removeParticipant(conversationId: String, userId: String): Flow<Resource<Unit>>
    +muteParticipant(conversationId: String, userId: String, mute: Boolean): Flow<Resource<Unit>>
}

' ===== Message =====
class Message {
    +id: String
    +senderId: String
    +recipientId: String
    +content: String
    +sentAt: Instant
    +isRead: Boolean
    +conversationId: String
    +createdAt: Instant
    +updatedAt: Instant
    --
    +sendMessage(conversationId: String, senderId: String, content: String): Flow<Resource<Message>>
    +getMessagesByConversation(conversationId: String): Flow<Resource<List<Message>>>
    +markMessageAsRead(messageId: String): Flow<Resource<Unit>>
    +deleteMessage(messageId: String): Flow<Resource<Unit>>
}

' ===== Notification =====
class Notification {
    +id: String
    +userId: String
    +senderId: String?
    +type: NotificationType
    +title: String
    +content: String
    +referenceObjectId: String?
    +referenceObjectType: String?
    +isRead: Boolean
    +createdAt: Instant
    --
    +getNotificationsForUser(userId: String): Flow<Resource<List<Notification>>>
    +markAsRead(notificationId: String): Flow<Resource<Unit>>
    +getUnreadCount(userId: String): Flow<Resource<Int>>
    +sendNotification(notification: Notification): Flow<Resource<Unit>>
    +deleteNotification(notificationId: String): Flow<Resource<Unit>>
}

' ===== DailyStudyTime =====
class DailyStudyTime {
    +id: String
    +studentId: String
    +date: LocalDate
    +durationSeconds: Long
    +createdAt: Instant
    +updatedAt: Instant
}

' ===== StudyTimeStatistics =====
class StudyTimeStatistics {
    +studentId: String
    +totalStudyTimeSeconds: Long
    +dailyStudyTimes: List<DailyStudyTime>
    +startDate: LocalDate
    +endDate: LocalDate
}

' ===== StudentGameResult =====
class StudentGameResult {
    +id: String
    +studentId: String
    +miniGameId: String
    +score: Double
    +maxScore: Double
    +completionStatus: CompletionStatus
    +submissionTime: Instant
    +durationSeconds: Long
    +attemptNumber: Int
    +createdAt: Instant
    +updatedAt: Instant
}

' ===== Relationships =====
Conversation "1" *-- "1..*" ConversationParticipant : conversationId
User "1" -- "0..*" ConversationParticipant : userId
Conversation "1" *-- "0..*" Message : conversationId
User "1" -- "0..*" Message : senderId
User "1" -- "0..*" Message : recipientId

User "1" -- "0..*" Notification : userId
User "1" -- "0..*" Notification : senderId

Student "1" -- "0..*" DailyStudyTime : studentId
Student "1" -- "0..*" StudentGameResult : studentId

@enduml
